# ais-progression-classifier

./: .gitignore  CITATION.cff  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
examples/: sample_predict.csv  sample_train.csv
src/ais_progression/: __init__.py  checkpointing.py  config.py  data.py  evaluation.py  gradcam_utils.py  lit_module.py  model.py  preprocessing.py  splitting.py  utils.py
src/ais_progression/commands/: __init__.py  gradcam.py  predict.py  preprocess.py  train.py
tests/: test_checkpointing.py  test_config.py  test_data.py  test_gradcam.py  test_preprocessing.py  test_repository_hygiene.py  test_splitting.py  test_train_integration.py  test_transforms.py
