[project]
name = "ais-progression-classifier"
version = "0.2.0"
description = "AIS (adolescent idiopathic scoliosis) progression/non-progression prediction from frontal spine X-rays, with transfer learning (PyTorch Lightning + timm)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ichikawa Lab" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pytorch-lightning>=2.2",
    "timm>=1.0",
    "opencv-python-headless>=4.9",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "grad-cam>=1.5",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "tensorboard>=2.16",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.urls]
Repository = "https://github.com/ichikawalab/ais-progression-classifier"

# GPU (CUDA) users: after `uv sync`, replace the CPU/default torch wheels with a
# CUDA-enabled build, e.g.:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu121
# See https://pytorch.org/get-started/locally/ for the correct index URL for your CUDA version.

[project.scripts]
ais-preprocess = "ais_progression.commands.preprocess:main"
ais-train = "ais_progression.commands.train:main"
ais-gradcam = "ais_progression.commands.gradcam:main"
ais-predict = "ais_progression.commands.predict:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ais_progression"]

[tool.pytest.ini_options]
testpaths = ["tests"]
